apps/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bvrinfra-portfolio
  namespace: default

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik


  rules:
  - host: portfolio.bvrinfra.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: bvrinfra-portfolio
            port:
              number: 80
